--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ yarn-error.log*
 pnpm-debug.log*
 
 # Build outputs
-dist/
+# dist/ - commented out for GitHub Pages deployment
 build/
 *.tsbuildinfo
 
